# obs-multirecord

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
data/locale/: en-US.ini
src/: multi-record-dock.cpp  multi-record-dock.hpp  plugin-main.c  record-pipeline.c  record-pipeline.h  source-combo-delegate.cpp  source-combo-delegate.hpp
